--- a/index.html
+++ b/index.html
@@ -17,15 +17,20 @@
   </head>
   <body>
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-      
-      <header class="masthead mb-auto">
-        <div class="inner">
-          <h3 class="masthead-brand">Kerja Remote</h3>
-          <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="#">Beranda</a>
-            <a class="nav-link" href="https://github.com/kerjaremote" target="_blank"><i class="fab fa-github"></i></a>
-          </nav>
-        </div>
+      <header>
+        <nav class="navbar navbar-expand-md">
+          <h3 class="navbar-brand">Kerja Remote</h3>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
+            <ul class="navbar-nav mr-sm-1">
+              <li>
+                <a href="https://github.com/kerjaremote"><i class="fab fa-github"></i></a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </header>
 
       <main role="main" class="inner cover justify-content-center align-items-center text-center">
